--- a/khoa-dohoa/css/style.css
+++ b/khoa-dohoa/css/style.css
@@ -45,7 +45,6 @@ body a:hover
 
 .doc-loader img
 {
-    width: 90px;
     height: 90px;        
 }
 
@@ -277,7 +276,7 @@ body a:hover
 .content-1170 .top-logo
 {
     width: 260px;    
-    padding-top: 150px;
+    padding-top: 210px;
 }
 
 @media (min-width: 768px) {
@@ -288,6 +287,7 @@ body a:hover
 @media (min-width: 992px) {
     .content-1170 .top-logo
 { width: 396px;    
+    padding-top:190px
 }
    
 }
