--- a/khoa-fullstack/css/main.css
+++ b/khoa-fullstack/css/main.css
@@ -1223,7 +1223,7 @@ header .header-logo a {
   width: 220px;
   max-width: 220px;
   height: 100px;
-  background: url("../img/neta-logo-1.png") no-repeat center;
+  background: url("../img/logo-vh.png") no-repeat center;
   background-size: 220px auto;
   font: 0/0 a;
   text-shadow: none;
