--- a/layout-javascript/css/style.css
+++ b/layout-javascript/css/style.css
@@ -43,13 +43,13 @@ body {
 }
 
 a {
-  color: #7ED321;
+  color: #f4eb00;
   -webkit-transition: 0.5s;
   -o-transition: 0.5s;
   transition: 0.5s;
 }
 a:hover, a:active, a:focus {
-  color: #7ED321;
+  color: #f4eb00;
   outline: none;
   text-decoration: none;
 }
@@ -67,17 +67,17 @@ h1, h2, h3, h4, h5, h6, figure {
 
 ::-webkit-selection {
   color: #fff;
-  background: #7ED321;
+  background: #f4eb00;
 }
 
 ::-moz-selection {
   color: #fff;
-  background: #7ED321;
+  background: #f4eb00;
 }
 
 ::selection {
   color: #fff;
-  background: #7ED321;
+  background: #f4eb00;
 }
 
 .gtco-nav {
@@ -230,7 +230,7 @@ h1, h2, h3, h4, h5, h6, figure {
   border-radius: 30px;
 }
 .gtco-nav ul li.btn-cta a:hover span {
-  background: #8bde2f;
+  background: #f4eb00;
   color: #fff;
 }
 .gtco-nav ul li.active > a {
@@ -259,16 +259,16 @@ h1, h2, h3, h4, h5, h6, figure {
   color: black;
 }
 .gtco-nav.scrolled ul li.active > a {
-  color: #7ED321 !important;
+  color: #000 !important;
 }
 .gtco-nav.scrolled ul li.btn-cta a {
   color: #fff;
 }
 .gtco-nav.scrolled ul li.btn-cta a span {
   border: none !important;
-  background: #7ED321;
+  background: #f4eb00;
   padding: 4px 20px;
-  color: #fff;
+  color: #000;
 }
 .gtco-nav.scrolled #gtco-logo em, .gtco-nav.scrolled #gtco-logo a {
   color: #000;
@@ -407,7 +407,7 @@ h1, h2, h3, h4, h5, h6, figure {
   width: 100%;
 }
 .gtco-cover a {
-  color: #7ED321;
+  color: #f4eb00;
 }
 .gtco-cover a:hover {
   color: white;
@@ -501,7 +501,7 @@ h1, h2, h3, h4, h5, h6, figure {
 
 #gtco-about .img-shadow {
   position: relative;
-  background: #7ED321;
+  background: #f4eb00;
   width: 100%;
   float: left;
 }
@@ -538,6 +538,11 @@ h1, h2, h3, h4, h5, h6, figure {
   z-index: -1;
   line-height: 1;
 }
+.gtco-icon i {
+  font-size: 4.6rem;
+  color: #f4eb00;
+}
+
 #gtco-practice-areas .heading .subtle-text span {
   display: block;
 }
@@ -588,7 +593,7 @@ h1, h2, h3, h4, h5, h6, figure {
 #gtco-our-team .gtco-team-reverse .img-shadow,
 #gtco-our-team .gtco-team .img-shadow {
   position: relative;
-  background: #7ED321;
+  background: #f4eb00;
   width: 100%;
   float: left;
   margin-bottom: 30px;
@@ -664,11 +669,11 @@ h1, h2, h3, h4, h5, h6, figure {
   position: absolute;
   width: 72px;
   height: 2px;
-  background: #7ED321;
+  background: #f4eb00;
 }
 
 .heading-colored {
-  color: #7ED321;
+  color: #f4eb00;
 }
 
 .read-more i {
@@ -700,7 +705,7 @@ h1, h2, h3, h4, h5, h6, figure {
   display: inline-block;
   zoom: 1;
   *display: inline;
-  color: #7ED321;
+  color: #000;
   padding-left: 10px;
   padding-right: 10px;
 }
@@ -726,7 +731,7 @@ h1, h2, h3, h4, h5, h6, figure {
   position: relative;
 }
 .gtco-contact-info ul li:before {
-  color: #7ed321;
+  color: #f4eb00;
   position: absolute;
   left: 0;
   top: .05em;
@@ -1116,21 +1121,21 @@ form label {
 }
 
 .btn-primary {
-  background: #7ED321;
+  background: #f4eb00;
   color: #fff;
-  border: 2px solid #7ED321 !important;
+  border: 2px solid #f4eb00 !important;
 }
 .btn-primary:hover, .btn-primary:focus, .btn-primary:active {
-  background: #8bde2f !important;
-  border-color: #8bde2f !important;
+  background: #f4eb00 !important;
+  border-color: #f4eb00 !important;
 }
 .btn-primary.btn-outline {
   background: transparent;
-  color: #7ED321;
-  border: 2px solid #7ED321;
+  color: #f4eb00;
+  border: 2px solid #f4eb00;
 }
 .btn-primary.btn-outline:hover, .btn-primary.btn-outline:focus, .btn-primary.btn-outline:active {
-  background: #7ED321;
+  background: #f4eb00;
   color: #fff;
 }
 
